--- a/Views/Tablero/TablerosRemaining.cshtml
+++ b/Views/Tablero/TablerosRemaining.cshtml
@@ -1,12 +1,12 @@
 @{
-    ViewData["Title"] = "Tableros";
+    ViewData["Title"] = "Tableros otros";
     bool IsAdmin = Context.Request.HttpContext.Session.GetString("Rol") == "admin";
 }
 
 @model ViewModels.TableroViewModels;
 
-
 <div class="contenedor">
+
     @if (Model.TieneMensajeExito)
     {
         <div id="mensajeTemporal" class="alert alert-success">
@@ -20,20 +20,20 @@
             @Html.Raw(Model.MensajeError)
         </div>
     }
-    <h2>Mis tableros</h2>
 
-
-
-    @if (Model.Tableros.Count() == 0)
+    @if (IsAdmin)
     {
-        <p>No tienes tableros creados. Para crear un tablero haz
-            <a asp-area="" asp-controller="Tablero" asp-action="Create">click aquí</a>
-        </p>
+        <h2 text-aling:center>Tableros de todos los usuarios</h2>
     }
     else
     {
+        <h2 text-aling:center>Tableros con tareas asignadas</h2>
+    }
+
+    @if (IsAdmin)
+    {
         <div class="table-responsive">
-            <table class="table table-dark  tabla2">
+            <table class="table table-dark tabla2">
                 <thead>
                     <tr class="tabla2-encabezado">
                         <th scope="col" hidden>ID</th>
@@ -42,7 +42,7 @@
                         <th scope="col">Nombre</th>
                         <th scope="col">Descripcion</th>
                         <th scope="col">Agragar Tarea</th>
-                        <th scope="col">Ver tareas</th>
+                        <th scope="col">Tareas</th>
                         <th scope="col">Editar</th>
                         <th scope="col">Eliminar</th>
                     </tr>
@@ -58,7 +58,7 @@
                             <td>@tablero.Descripcion</td>
                             <td>
                                 <a asp-controller="Tablero" asp-action="AddTarea" asp-route-idTablero="@tablero.Id"
-                                    asp-route-Id_usuario_propietario="@tablero.Id_usuario_propietario" title="agregar tarea">
+                                    asp-route-Id_usuario_propietario="@tablero.Id_usuario_propietario">
                                     <button type="button" class="btn btn-success">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                             class="bi bi-plus-square-fill" viewBox="0 0 16 16">
@@ -69,7 +69,8 @@
                                 </a>
                             </td>
                             <td>
-                                <a asp-controller="TareasByTablero" asp-action="Index" asp-route-idTablero="@tablero.Id" title="ver tareas">
+                                <a asp-controller="TareasByTablero" asp-action="Index" asp-route-idTablero="@tablero.Id"
+                                    asp-route-idPropietarioTablero="@tablero.Id_usuario_propietario" title="ver tareas">
                                     <button type="button" class="btn btn-success">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                             class="bi bi-eye" viewBox="0 0 16 16">
@@ -115,7 +116,56 @@
             </table>
         </div>
     }
-
+    else
+    {
+        @if (Model.Tableros.Count() == 0)
+        {
+            <p>No tienes tableros con tareas asignadas.</p>
+        }
+        else
+        {
+            <div class="table-responsive">
+                <table class="table table-dark tabla3">
+                    <thead>
+                        <tr class="tabla3-encabezado">
+                            <th scope="col" hidden>ID</th>
+                            <th scope="col" hidden>ID Usuario Propietario</th>
+                            <th scope="col">Usuario Propietario</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Descripcion</th>
+                            <th scope="col">Ver tareas</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var tablero in Model.Tableros)
+                        {
+                            <tr>
+                                <td hidden>@tablero.Id</td>
+                                <td hidden>@tablero.Id_usuario_propietario</td>
+                                <td>@tablero.Usuario_propietario</td>
+                                <td>@tablero.Nombre</td>
+                                <td>@tablero.Descripcion</td>
+                                <td>
+                                    <a asp-controller="TareasByTablero" asp-action="TareasAsignadasByTablero"
+                                        asp-route-idTablero="@tablero.Id" title="ver tareas">
+                                        <button type="button" class="btn btn-success">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                                class="bi bi-eye" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
+                                                <path
+                                                    d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0" />
+                                            </svg>
+                                        </button>
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        }
+    }
 </div>
 
 <script>
@@ -124,7 +174,7 @@
         if (mensajeTemporal) {
             setTimeout(function () {
                 mensajeTemporal.classList.add('mensaje-oculto');
-            }, 5000);
+            }, 10000);
         }
     });
 </script>
