--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -1,9 +1,5 @@
 @model ViewModels.CreateUserViewModels;
 
-<h2>Crear usuario</h2>
-
-<p>Ingrese los siguientes datos:</p>
-
 @if (Model.TieneMensajeDeError)
 {
     <div id="mensajeTemporal" class="alert alert-warning">
@@ -11,34 +7,42 @@
     </div>
 }
 
-<form asp-controller="Usuario" asp-action="Create">
-    <div class="mb-3">
-        <label asp-for="@Model.Name"></label>
-        <input asp-for="@Model.Name" class="form-control" />
-        <span asp-validation-for="@Model.Name" class="text-danger"></span>
-    </div>
+<div class="border border-primary border-3 p-3 rounded contenedor-form">
+    
+    <h2>Crear usuario</h2>
 
-    <div class="mb-3">
-        <label asp-for="@Model.Rol"></label>
-        <select asp-for="@Model.Rol"
-            asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.Usuario.RolUsuario>()"
-            class="form-control"></select>
-        <span asp-validation-for="@Model.Rol" class="text-danger"></span>
-    </div>
+    <p>Ingrese los siguientes datos:</p>
 
-    <div class="mb-3">
-        <label asp-for="@Model.Password"></label>
-        <input asp-for="@Model.Password" class="form-control" />
-        <span asp-validation-for="@Model.Password" class="text-danger"></span>
-    </div>
+    <form asp-controller="Usuario" asp-action="Create">
+        <div class="mb-3">
+            <label asp-for="@Model.Name"></label>
+            <input asp-for="@Model.Name" class="form-control" />
+            <span asp-validation-for="@Model.Name" class="text-danger"></span>
+        </div>
 
-    <button type="submit" class="btn btn-primary">Enviar</button>
-    <a asp-controller="Usuario" asp-action="Index">
-        <button type="button" class="btn btn-danger">
-            Cancelar
-        </button>
-    </a>
-</form>
+        <div class="mb-3">
+            <label asp-for="@Model.Rol"></label>
+            <select asp-for="@Model.Rol"
+                asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.Usuario.RolUsuario>()"
+                class="form-control"></select>
+            <span asp-validation-for="@Model.Rol" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="@Model.Password"></label>
+            <input asp-for="@Model.Password" class="form-control" />
+            <span asp-validation-for="@Model.Password" class="text-danger"></span>
+        </div>
+
+        <div class="contenedor-boton">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+            <a asp-controller="Usuario" asp-action="Index" class="btn btn-danger">
+                Cancelar
+            </a>
+        </div>
+    </form>
+</div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
@@ -50,8 +54,7 @@
         if (mensajeTemporal) {
             setTimeout(function () {
                 mensajeTemporal.classList.add('mensaje-oculto');
-            }, 10000);
+            }, 5000);
         }
     });
 </script>
-
